<resources>
    <string name="app_name">Apartment Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to SignUp -->
    <string name="Apartment_text_field">Apartment</string>
    <string name="registration_button">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">Apartment Manager</string>
    <!-- Strings related to Main Activity -->
    <string name="roommates">Roommates</string>
    <string name="jobs">Jobs</string>
    <string name="missing">Missing</string>
    <string name="missing_button">I will not be at home!</string>
    <string name="missing_title">Who will not be at home?</string>
    <string name="jobs_title">Upcoming Jobs</string>
    <string name="jobs_button">Create new Job</string>
    <string name="roommates_title">My roommates</string>
    <string name="roommates_button">Invite Roommates</string>
    <!-- Strings related to Join Apartment Activity-->
    <string name="join_apartment_text">Apartment</string>
    <string name="join_apartment_button">Join</string>
    <string name="create_apartment_button">Create</string>
    <string name="display_name">Display Name</string>
    <string name="job_name">Job name</string>
    <string name="job_date">Job date</string>
    <string name="job_time">Job time</string>
    <string name="job_assignee">Job assignee</string>
    <string name="create_job">Create job</string>
    <string name="start_date">Start Date</string>
    <string name="signal_absence">Signal Absence</string>
    <string name="end_date">End Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="refresh">Refresh</string>

</resources>
